# cistardist_pytorch

./: .gitignore  COMPILE_NMS.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test_fromdoi.py
cistardist_pytorch/: __init__.py  cli.py  config.py  converter.py  geometry.py  model.py  net.py  nms.py
cistardist_pytorch/lib/: c_nms.cpp
data/: nuclei.tif  nuclei_medium.tif
models/CP_Foci_Aggr/: dlset.mat
models/SD_Foci_Aggregates/: thresholds.json
models/SD_Foci_Finn/: config.json  thresholds.json
models/SD_Foci_HQ/: thresholds.json
models/SD_Nuclei_fromFoci_HQ/: config.json  thresholds.json
models/SD_foci_BestHQ/: thresholds.json
models/SD_nuclei_BestHQ/: thresholds.json
tests/: test_v1.py
