[build-system]
requires = ["setuptools>=68", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "cistardist_pytorch"
version = "0.3.0"
description = "PyTorch-only StarDist 2D inference for Keras H5 StarDist weights."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = ["stardist", "pytorch", "segmentation", "nuclei", "bioimage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "h5py",
    "tifffile",
    "scipy",
    "scikit-image",
    "tqdm",
]

[project.scripts]
cistardist-convert = "cistardist_pytorch.cli:main_convert"
cistardist-predict = "cistardist_pytorch.cli:main_predict"

[tool.setuptools.packages.find]
include = ["cistardist_pytorch*"]
